--- a/templates/files.html
+++ b/templates/files.html
@@ -1,10 +1,17 @@
-{% extends 'base.html' %} {%block content%}
+{% extends 'base.html' %} {%block content%} {% if user.is_authenticated %}
 <h2>files</h2>
 <ul>
   {% for file in files %}
-  <li>{{file.title}} - <a href="{% url 'download' file.id %}">Download</a></li>
+  <li>
+    {{file.title}} - Uploaded by {{file.owner_name}} -<a
+      href="{% url 'download' file.id %}"
+      >Download</a
+    >
+  </li>
   {% empty %}
   <li>No file found</li>
   {% endfor %}
 </ul>
-{%endblock content%}
+{% else %}
+<div class="staff-container">Staff page</div>
+{%endif %} {%endblock content%}
