--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -2,7 +2,8 @@
 
 <div class="form-container">
   <form method="POST">
-    {% csrf_token %} {{ register_form }}
+    {% csrf_token %}
+    {{form.as_p}}
     <button type="submit">Signup</button>
   </form>
   <p>If you already have an account, <a href="/accounts/login">Login</a></p>
